# lare

./: LICENSE  NOTES.md  README.md  lare.cabal  stack.yaml
src/: Dep.hs  Lare.hs
src/Domain/: Dom.hs  Flow.hs  RE.hs
src/Lare/: Analysis.hs  Assignment.hs  Domain.hs  Examples.hs  Flow.hs  RE.hs  Tick.hs  Util.hs
