name:                lare
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mischel/lare#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Schaper
maintainer:          michael.schaper@uibk.ac.at
copyright:           Copyright: (c) 2018 Michael Schaper
category:            Logic
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lare, Dep
  build-depends:       base >= 4.7 && < 5, containers, mtl, ansi-wl-pprint
  default-language:    Haskell2010
  ghc-options:
    -Wall -O0 -fdefer-typed-holes

source-repository head
  type:     git
  location: https://github.com/mischel/lare

