name:                lare
version:             0.0.0.0
synopsis:            Implicit Computation Complexity of Fowchart Programs
-- description:
homepage:            https://github.com/mischel/lare#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Schaper
maintainer:          michael.schaper@uibk.ac.at
copyright:           Copyright: (c) 2018 Michael Schaper
category:            Program Analysis
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lare.Analysis
    Lare.Examples
    Lare.Domain
    Lare.Flow
    Lare.Tick
    Lare.RE
    Lare.Util
  build-depends:       base >= 4.7 && < 5, containers, ansi-wl-pprint
  default-language:    Haskell2010
  ghc-options:
    -- -O0 -fdefer-typed-holes -Wall -Wcompat  -Wredundant-constraints
    -Wall -O3
  other-extensions:
    RecordWildCards
    FlexibleInstances
    DeriveFunctor


source-repository head
  type:     git
  location: https://github.com/mischel/lare

